Text Align Fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@
   label.en__field__label.en__field__label--item {
     background-color: #fff;
     color: #333;
-    text-align-last: left;
+    text-align: left;
     text-transform: none;
     font-size: 14px;
     margin: 20px 0;
